syntax = "proto2";

option java_multiple_files = true;
option java_package = "coordinatorservice";
option java_outer_classname = "CoordinatorServiceProto";

package coordinatorservice;

// Service definition
service ComputationCoordinator {
    rpc GetCoordinator (GetCoordinatorRequest) returns (GetCoordinatorResponse);
    rpc CreateCoordinator (CreateCoordinatorRequest) returns (CreateCoordinatorResponse);
    rpc UpdateCoordinator (UpdateCoordinatorRequest) returns (UpdateCoordinatorResponse);
    rpc DeleteCoordinator (DeleteCoordinatorRequest) returns (DeleteCoordinatorResponse);
    rpc SubmitNumberList (NumberListRequest) returns (ComputationResponse);
    rpc SubmitFile (FileRequest) returns (ComputationResponse);
    rpc GetStatus (StatusRequest) returns (StatusResponse);
}

message JobStatus {
    enum JobStatusType {
        UNKNOWN = 0;
        PENDING = 1;
        PROCESSING = 2;
        COMPLETED = 3;
        FAILED = 4;
    }
    optional JobStatusType status = 1;
    optional string message = 2;
    optional double progress = 3;
    optional bool completed = 4;
    optional bool success = 5;
}

message NumberListRequest {
    repeated double numbers = 1;
    optional string output_file = 2;
    optional string delimiter = 3;
    optional string job_id = 4;  // Added for compatibility
}

message FileRequest {
    optional string file_path = 1;
    optional string output_file = 2;
    optional string delimiter = 3;
    optional bytes file_content = 4;  // Optional binary content
}

message StatusRequest {
    optional string job_id = 1;
}

message StatusResponse {
    optional JobStatus job_status = 1;
    repeated double results = 2;
    optional bool completed = 3;
    optional bool success = 4;
}

message ComputationResponse {
    optional string job_id = 1;
    optional bool success = 2;
    optional string message = 3;
}

message GetCoordinatorRequest {
    optional string id = 1;
}

message GetCoordinatorResponse {
    optional Coordinator coordinator = 1;
}

message CreateCoordinatorRequest {
    optional Coordinator coordinator = 1;
}

message CreateCoordinatorResponse {
    optional Coordinator coordinator = 1;
}

message UpdateCoordinatorRequest {
    optional Coordinator coordinator = 1;
}

message UpdateCoordinatorResponse {
    optional Coordinator coordinator = 1;
}

message DeleteCoordinatorRequest {
    optional string id = 1;
}

message DeleteCoordinatorResponse {
    optional bool success = 1;
}

message Coordinator {
    optional string id = 1;
    optional string name = 2;
    optional string email = 3;
}